<resources>
    <string name="app_name">pocketnode</string>

    <string name="storage">storage</string>
    <string name="network_setttings">Network settings</string>
    <string name="nodes">Nodes</string>
    <string name="Bandwith">Bandwith</string>
    <string name="Peers">Peers</string>
    <string name="Security">Security</string>
    <string name="Logs">Logs</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="pref_about">About</string>
    <string name="height">Block Height</string>
    <string name="target">Latest Block</string>

    <string name="testnet">Testnet</string>
    <string name="summary_testnet">Run on testnet.</string>
    <string name="title_testnet">Testnet</string>

    <string name="stagenet">Stagenet</string>
    <string name="summary_stagenet">Run on stagenet.</string>
    <string name="title_stagenet">Stagenet</string>

    <string name="p2pBindPort">p2pBindPort</string>
    <string name="summary_p2pBindPort">Leave blank for default ports</string>
    <string name="title_p2pBindPort">P2P Port</string>

    <string name="rpcBindPort">rpcBindPort</string>
    <string name="summary_rpcBindPort">Leave blank for default ports</string>
    <string name="title_rpcBindPort">RPC Port</string>

    <string name="zmqBindPort">zmqBindPort</string>
    <string name="summary_zmqBindPort">Leave blank for 127.0.0.1</string>
    <string name="title_zmqBindPort">ZMQ RPC server</string>

    <string name="limitRate">limitRate</string>
    <string name="summary_limitRate">Set limit-rate [kB/s]</string>
    <string name="title_limitRate">Limit rate</string>

    <string name="limitRateDown">limitRateDown</string>
    <string name="summary_limitRateDown">Set limit-rate [kB/s]</string>
    <string name="title_limitRateDown">Limit download rate</string>

    <string name="limitRateUp">limitRateUp</string>
    <string name="summary_limitRateUp">Set limit-rate [kB/s]</string>
    <string name="title_limitRateUp">Limit upload rate</string>

    <string name="outPeers">outPeers</string>
    <string name="summary_outPeers">Set max number of out peers</string>
    <string name="title_outPeers">Out peers</string>

    <string name="inPeers">inPeers</string>
    <string name="summary_inPeers">Set max number of in peers</string>
    <string name="title_inPeers">In peers</string>

    <string name="peerNode">peerNode</string>
    <string name="summary_peerNode">Manually add peer to local peerlist</string>
    <string name="title_peerNode">Add peer</string>

    <string name="exclusiveNode">exclusiveNode</string>
    <string name="summary_exclusiveNode">Specify list of peers to connect to only (ip:port)</string>
    <string name="title_exclusiveNode">Exclusive node</string>

    <string name="priorityNode">priorityNode</string>
    <string name="summary_priorityNode">Specify a peer to connect (ip:port)</string>
    <string name="title_priorityNode">Priority node</string>

    <string name="summary_about">This app is designed to run a Monero node locally on your Android device. Connect your wallet to the Node Address on the Main screen to use this node.  Please file Bugs/Issues/Feature requests on the <a href="https://github.com/CryptoGrampy/xmr-pocket-node/issues">xmr-pocket-node code repo</a></string>
    <string name="app_version">1.1</string>
    <string name="daemon_version">N/A</string>
    <string name="title_daemon_version">Wownero daemon version</string>
    <string name="summary_support">Got an issue or having ideas to improve this app? We are happy to help at https://github.com/enerc/Aeon-daemon</string>
    <string name="title_support">Feedback</string>

    <string name="action_log">Logs</string>
    <string name="log_content">Log content.......</string>
    <string name="donation">Donations</string>
    <string name="donation_aeon">WOW donation</string>
    <string name="donation_xmr">xmr donation</string>
    <string name="donation_aeon_msg" translatable="false">Wownero</string>
    <string name="donation_aeon_addr" translatable="false">Wo3tBXLr9Sq7cyqHiwoYTTGc4EfPidFFUN6rPv4RdrWc1boYemdNsRyFbpq1nnDAbRYTb8QArzF86Be1AuiabmqA37mTGhw1u</string>
    <string name="donation_xmr_msg" translatable="false">Support 85-Year-Old Developers. Buy Grampy a Coffee:</string>
    <string name="donation_xmr_addr" translatable="false">8BudmXKZwpXhfVGCtgFPyKWgLcDLYJ5jRT95xCp4JMFWapgTLrun41AG6LPbef7WFA8T531QGnZT51cDF6uF9HECDhibEVw</string>
    <string name="apropos">about this app</string>

    <string name="title_version" translatable="false">Version</string>
    <string name="peers_connected">peers connected</string>
    <string name="address_selected_msg">Address selected</string>
    <string name="logs_selected_msg">Logs selected</string>

    <string name="summary_theme">Choose a theme</string>
    <string name="title_theme">Theme</string>
    <string name="dialog_theme">Select a theme</string>
    <string name="action_theme">Theme</string>

    <string name="restricted_rpc">Restricted RPC access</string>
    <string name="restricted_rpc_msg">Prevents external users to access your node</string>
    <string name="daemon_was_killed">Aeon daemon stopped syncing</string>
    <string name="msg_peers_connected">peers connected</string>
    <string name="download_at">Download at</string>

    <!-- external storage -->
    <string name="use_sd_card">Use SD card</string>
    <string name="summary_use_sd_card" translatable="false"></string>
    <string name="title_storage">Location</string>
    <string name="summary_storage">SD card location</string>
    <string name="use_custom_storage">Use custom storage location</string>
    <string name="summary_custom_storage" translatable="false"></string>
    <string name="title_custom_storage">Define your own blockchain storage location</string>
    <string name="summary_custom_location">Data won\'t be removed when uninstalling this app</string>
    <string name="enable_node" translatable="false">Start Node</string>
    <string name="summary_enable_node" translatable="false">Enable/Disable your node</string>
    <string name="fastblock_sync">Fast bloc sync</string>
    <string name="summary_fastblock_sync">Sync up most of the way by using embedded, known block hashes.</string>
    <string name="disk_used">GB free</string>
    <string name="daemon_not_running">🔴 Disconnected</string>
    <string name="daemon_running" translatable="false">🟢 Connected</string>
    <string name="sync_starting">Synchronization Starting</string>

    <string name="sd_custom_error">Invalid settings</string>
    <string name="sd_custom_error_msg">Custom and SD storage can\'t be set at the same time</string>

    <!-- logs -->
    <string-array name="loglevel_titles">
        <item>Error</item>
        <item>Info</item>
        <item>Debug</item>
        <item>Trace</item>
    </string-array>

    <string-array name="log_level_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="theme_titles">
        <item>Solid color</item>
        <item>WOW coin</item>
        <item>Wownario</item>
        <item>WOW!</item>
    </string-array>

    <string-array name="theme_values">
        <item>PreferencesThemeWownero1</item>
        <item>PreferencesThemeWownero2</item>
        <item>PreferencesThemeWownero3</item>
        <item>PreferencesThemeWownero4</item>
    </string-array>


    <!-- preferences -->
    <string name="summary_blockSyncSize">0 = adaptive</string>
    <string name="title_blockSyncSize">Bloc sync size</string>
    <string name="summary_loglevel">Log level</string>
    <string name="title_loglevel">Level</string>
    <string name="dialog_loglevel">Select the daemon log level</string>

    <string name="pruning">Prune blockchain</string>
    <string name="pruning_msg">Reduce stored size</string>

</resources>
